--- a/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountData.cs" />
+    <Compile Include="TestBase.cs" />
     <Compile Include="ContactCreationTest.cs" />
     <Compile Include="ContactData.cs" />
     <Compile Include="GroupData.cs" />
